# youtubetranscriptQA_rag

./: README.md  app.py  pyproject.toml  rag_utils.py  requirements.txt  template.json  template_generator.py
resources/vector_store/: chroma.sqlite3
